# apikit_cli

./: .gitignore  Makefile  README.md  TODO.md  apikit  apikit.py  checkings.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml  release.yaml
apikit_cli/: apikit.py
apikit_cli/tests/: test_apikit.py
releases/: apikit_0.0.hash  apikit_0.2.hash
sample_app/: Dockerfile  Makefile  apikit.ini  pytest.ini
sample_app/apps/: __init__.py  sample_commands.py
sample_app/apps/tests/: test_sample.py  test_sample_app.py
